@@ -41,18 +41,19 @@ sub detect {
   my @exts;
   my $types = $self->types;
   for my $ext (sort keys %$types) {
-    my $try = lc $types->{$ext};
-    $try =~ s/\;.*$//;
-    push @exts, $ext if $type eq $try;
+    my @types = ref $types->{$ext} ? @{$types->{$ext}} : ($types->{$ext});
+    $type eq $_ and push @exts, $ext
+      for map { s/\;.*$//; $_ } map {lc} @types;
   }
 
   return \@exts;
 }
 
 sub type {
-  my ($self, $ext, $type) = @_;
-  return $self->types->{$ext} unless $type;
-  $self->types->{$ext} = $type;
+  my ($self, $ext) = (shift, shift);
+  my $types = $self->types;
+  return ref $types->{$ext} ? $types->{$ext}->[0] : $types->{$ext} unless @_;
+  $types->{$ext} = shift;
   return $self;
 }
 
@@ -100,8 +101,10 @@ contain more than one MIME type are ignored.
 
   my $type = $types->type('png');
   $types   = $types->type(png => 'image/png');
+  $types   = $types->type(json => ['application/json', 'text/x-json']);
 
-Get or set MIME type for file extension.
+Get or set MIME type for file extension, alternatives are only used for
+detection.
 
 =head1 SEE ALSO
 
