@@ -1,6 +1,6 @@
 use Mojo::Base -strict;
 
-use Test::More tests => 30;
+use Test::More tests => 38;
 
 # "Your mistletoe is no match for my *tow* missile."
 use Mojolicious::Types;
@@ -42,3 +42,14 @@ is_deeply $t->detect('text/html,*/*'),             [], 'no formats';
 is_deeply $t->detect('text/html;q=0.9,*/*'),       [], 'no formats';
 is_deeply $t->detect('text/html,*/*;q=0.9'),       [], 'no formats';
 is_deeply $t->detect('text/html;q=0.8,*/*;q=0.9'), [], 'no formats';
+
+# Alternatives
+$t->type(json => ['application/json', 'text/x-json']);
+is $t->types->{json}->[0], 'application/json', 'right type';
+is $t->types->{json}->[1], 'text/x-json',      'right type';
+is_deeply $t->detect('application/json'), ['json'], 'right formats';
+is_deeply $t->detect('text/x-json'),      ['json'], 'right formats';
+is_deeply $t->detect('text/html'), ['htm', 'html'], 'right formats';
+is $t->type('json'), 'application/json',        'right type';
+is $t->type('htm'),  'text/html',               'right type';
+is $t->type('html'), 'text/html;charset=UTF-8', 'right type';
