@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Mojolicious.
 
 2.80  2012-04-10
+  - Added support for alternative MIME types to Mojolicious::Types.
   - Added endpoint method to Mojo::UserAgent::Transactor.
   - Improved tests.
   - Fixed HTTPS proxy keep alive bug in Mojo::UserAgent.
